update user feature
